<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">



            <EditText
                android:id="@+id/Title_position"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/Title_position"
                android:textColorHint="#606060"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/Credit"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/Credit"
                android:textColorHint="#606060"
                android:inputType="number"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Title_startdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="20"
                    android:hint="@string/Title_date1"
                    android:textColorHint="#606060"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"/>
                <EditText
                    android:id="@+id/Title_enddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="20"
                    android:hint="@string/Title_date2"
                    android:textColorHint="#606060"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>


            <EditText
                android:id="@+id/hashtag"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/hashtag"
                android:textColorHint="#606060"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/hint"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/hint"
                android:textColorHint="#606060"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnGallery"
                android:text="@string/albumuplodebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"/>


            <ImageView
                android:id="@+id/picture"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toTopOf="@+id/llBottomNav"/>


            <Button
                android:id="@+id/upload"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/uploadbutton"
                android:gravity="center"
                android:textSize="30sp"
                />



        </LinearLayout>
    </ScrollView>
</LinearLayout>