<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/edit_category"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/gifticoncategory"
                android:textColorHint="#606060"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"/>


            <EditText
                android:id="@+id/edit_giftiocnname"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="10"
                android:ems="20"
                android:hint="@string/gifticonname"
                android:textColorHint="#606060"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp" />

            <EditText
                android:id="@+id/edit_credit"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:ems="20"
                android:hint="@string/Credit"
                android:inputType="number"
                android:textColorHint="#606060"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="70dp"/>

            <Button
                android:id="@+id/btnGallery"
                android:text="@string/addgifticonbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"/>


            <ImageView
                android:id="@+id/giftpicture"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toTopOf="@+id/llBottomNav"/>


            <Button
                android:id="@+id/upload"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:text="@string/uploadbutton"
                android:gravity="center"
                android:textSize="30sp"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>